# ree-save-editor

./: Cargo.toml  README.md  config.json  game_configs.json
.github/ISSUE_TEMPLATE/: additional-game-support-request.md  corrupt-saves.md
assets/mhwilds/: remapmhwilds.json
flutter_app/: .gitignore  README.md  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/test/: widget_test.dart
gui/: Cargo.toml
gui/src/: app.rs  config.rs  dialog.rs  file.rs  lib.rs  main.rs  steam.rs  tab.rs  viewer.rs
src/: game_context.rs  lib.rs
src/edit/: mod.rs  modv2.rs  typesv2.rs
src/save/: corrupt.rs  eval.rs  game.rs  mod.rs  remap.rs  types.rs
src/save/crypto/: lime.rs  mandarin.rs  util.rs
