[package]
name = "ree-save-editor"
version = "1.0.2"
edition = "2024"

[[bin]]
name = "ree-save-editor"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
re9 = []
mhwilds = []
mhst3 = []
mhrise = []
pragmata = []

[dependencies]
ree-lib = { path = "../", default-features = false, features = ["save"] }
shellexpand = "3.1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.8"
